# synology-drive-api

./: .gitignore  LICENSE  README.md  pyproject.toml
synology_drive_api/: base.py  drive.py  files.py  labels.py  tasks.py  utils.py
