[tool.poetry]
name = "synology_drive_api"
version = "1.0.1"
description = ""
authors = ["zbjdonald <zbjdonald@qq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
simplejson = "^3.17.0"
selenium = "^3.141.0"
optionaldict = "^0.1.1"

[tool.poetry.dev-dependencies]
pandas = "^1.1"
xlrd = "^1.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
